src/objects/Setup_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Setup Questionnaires</relationshipLabel>
        <relationshipName>Setup_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup Questionnaire</label>
    <nameField>
        <displayFormat>ID-{000}</displayFormat>
        <label>Setup Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Questionnaires</pluralLabel>
    <recordTypes>
        <fullName>Setup_Questionnaire</fullName>
        <active>true</active>
        <description>Training Questions</description>
        <label>Setup Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vetting_Questions</fullName>
        <active>true</active>
        <description>Vetting Questions</description>
        <label>Vetting Questions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>